fix: rename utility class `nowrap` -> `whitespace-nowrap`

--- a/style.css
+++ b/style.css
@@ -685,7 +685,7 @@ input.sidenote-toggle {
 }
 
 /* Prevent line breaks inside an element */
-.nowrap {
+.whitespace-nowrap {
   white-space: nowrap;
 }
 
